[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/game/Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/game/Game.gd" type="Script" id=2]
[ext_resource path="res://core/events/EventQueue.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/events/EventFactory.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="EventFactory" parent="." instance=ExtResource( 4 )]

[node name="GameLoop" parent="." instance=ExtResource( 3 )]

[node name="Table" parent="." instance=ExtResource( 1 )]

[connection signal="completed" from="GameLoop" to="." method="_on_GameLoop_completed"]
